<resources>
    <string name="app_name">WheresMyMoney</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_splash">Splash</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="failedmsg">login failed Please enter your credentials correctly or check your internet connection</string>
    <string name="coaxuser">Please Enter a username and password</string>
    <string name="application_icon">Application Icon</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="no_account_yet">No account yet?</string>
    <string name="signup">Signup</string>
    <string name="name">Name</string>
    <string name="create_account">Create Account</string>
    <string name="already_a_member">Already a member?</string>
    <string name="coaxsignup">Please Enter all the fields</string>
    <string name="failedsignin">please enter a valid email id and a password of atleast 6 characters or check your internet connection</string>
    <string name="test_email">name@email.com</string>
    <string name="test_name">Name</string>
    <string name="dberror">Could not connect to database , check internet connection and try again later</string>
</resources>
